# viam-rplidar

./: .canon.yaml  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  apt-setup.sh  main.cpp  meta.json  packaging.make  run.sh
.github/workflows/: deploy.yml
etc/packaging/appimages/: viam-rplidar-module-aarch64.yml  viam-rplidar-module-x86_64.yml
src/: rplidar.cpp  rplidar.hpp
